# models/Massage.js
@@ -1,4 +1,5 @@
 const mongoose = require('mongoose');
+require('./Rating');
 
 const MassageSchema = new mongoose.Schema({
     name: {
@@ -71,6 +72,7 @@ MassageSchema.virtual('reservations', {
 MassageSchema.pre('deleteOne', { document: true, query: false }, async function () {
     console.log(`Reservations being removed from massage shop ${this._id}`);
     await this.model('Reservation').deleteMany({ massage: this._id });
+    await this.model('Rating').deleteMany({ massage: this._id });
 });
 
 module.exports = mongoose.model('Massage', MassageSchema);
